--- a/src/index.css
+++ b/src/index.css
@@ -329,8 +329,8 @@ body {
   color: var(--color-background-500);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.8);
   font-family: sans-serif;
-  font-size: 2.4rem;
-  font-weight: bold;
+  font-size: 1.8rem;
+  font-weight: bolder;
   cursor: pointer;
   z-index: 999;
   display: flex;
