--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ body {
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
   position: relative;
+  overflow-y: auto;
 }
 
 .loader {
@@ -248,10 +249,10 @@ body {
 }
 
 .details section {
-  padding: 4rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 1.6rem;
+  gap: 0.8rem;
 }
 
 .details img {
@@ -260,11 +261,11 @@ body {
 
 .details-overview {
   width: 100%;
-  padding: 2.4rem 3rem;
+  padding: 1rem 1.4rem;
   background-color: var(--color-background-100);
   display: flex;
   flex-direction: column;
-  gap: 1.4rem;
+  gap: 1rem;
 }
 
 .details-overview h2 {
